# Office365-REST-Python-Client

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  MANIFEST.in  README-dev.md  README.md  examplesV2.py  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements.txt  runExamples.py  settings.py  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml
client/: AuthenticationContext.py  ClientContext.py  ClientObject.py  ClientObjectCollection.py  ClientQuery.py  ClientRequest.py  Principal.py  Site.py  Web.py  WebCollection.py  client_context.py  client_object.py  client_object_collection.py  client_value_object.py  content_type.py  content_type_collection.py  field.py  file.py  file_collection.py  file_creation_information.py  filecreationinformation.py  folder.py  folder_collection.py  group.py  group_collection.py  list.py  listItem_collection.py  list_collection.py  list_creation_information.py  listitem.py  listitem_creation_information.py  listitemcreationinformation.py  principal.py  site.py  user.py  user_collection.py  view.py  view_collection.py  web.py  web_collection.py  (+2 more)
examples/: ListItemsOperations.py  __init__.py  daemon_sample.py  data_generator.py  file_operations.py  list_operations.py  listitem_operations.py  listitems_operations_alt.py  requirements.txt  selfsigncert.pem  selfsignkey.pem  settings.py  sharepoint_client_flow_auth.py  user_group_operations.py  view_operations.py  webRead.py  webRead_alt.py  web_operations.py  web_read_direct.py
generator/: __init__.py  (+8 more)
(+3320 files in other folders)
