[metadata]
description-file = README.md

[isort]
profile=black

[flake8]
# These error codes can be fixed, but since it touches many files the
# suggestion is to do it one code at a time to reduce review effort
# F401 - imported but unused
# F841 - local variable defined but never used
extend-ignore = E203, E501, W503, F401, F841
max-line-length = 88
exclude =
    generator/metadata
    office365/runtime/compat.py

[pylint]
max-line-length=120
# all codes: http://pylint-messages.wikidot.com/all-codes
disable=
    C0103,
    C0303,
    C0111,
    C0415, # import-outside-toplevel
    C0112, # empty-docstring
    C0209, # consider-using f-string
    C0114, # missing-module-docstring
    R1725, # super-with-arguments

[pylint.FORMAT]
max-line-length = 121
